--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,7 @@
-#example.com/page will display the contents of example.com/page.html
+RewriteEngine On
+
+RewriteBase /
+ 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.html -f
