--- a/.htaccess
+++ b/.htaccess
@@ -7,4 +7,5 @@ RewriteRule ^(.+)$ $1.html [L,QSA]
 #301 from example.com/page.html to example.com/page
 RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /.*\.html\ HTTP/
 RewriteRule ^(.*)\.html$ /$1 [R=301,L]
-redirect 301 /berver.tk/form.html https://forms.gle/7sQxC1UFVmVJ2trH8
+Redirect 301 /form.html https://forms.gle/7sQxC1UFVmVJ2trH8
+ErrorDocument 404 /404.html
